# go-chain-chat

./: README.md  go.mod
chat-contracts/: Anchor.toml
chat-contracts/programs/chat-contracts/: Cargo.toml
chat-contracts/programs/chat-contracts/src/: lib.rs
chat-contracts/tests/: chat-contracts.ts
chat-pass/: Cargo.toml  package-lock.json  package.json
chat-pass/src/: instruction.rs  processor.rs  state.rs
chat-pass/tests/: chat-contracts.ts
client/: package-lock.json  package.json
client/src/: App.css  App.tsx
client/src/service/: socket.ts
cmd/: main.go
controllers/: chat.go
server/cmd/: main.go
server/controllers/: chat.go
server/services/chat/: chat.go  client.go
services/chat/: chat.go  client.go
